Add Jupyter notebook for regex operations and create a greeting script

--- a/Syntax/Operation.ipynb
+++ b/Syntax/Operation.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -354,8 +354,11 @@
    ],
    "source": [
     "import re\n",
+    "\n",
     "text = \"2025-04-23\"\n",
-    "match = re.search(r\"(\\d{4})-(\\d{2})-(\\d{2})\", text)\n",
+    "pattern = r\"(\\d{4})-(\\d{2})-(\\d{2})\"\n",
+    "match = re.search(pattern, text)\n",
+    "\n",
     "print(match)  # match object\n",
     "if match:\n",
     "    print(\"Year:\", match.group(1))   # 2025\n",
@@ -372,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -386,10 +389,106 @@
    ],
    "source": [
     "import re\n",
-    "s='abc123'\n",
-    "m=re.match(r'(\\w+)(\\d+)',s)\n",
+    "\n",
+    "str='abc123'\n",
+    "pattern =r'(\\w+)(\\d+)'\n",
+    "m=re.match(pattern,str)\n",
+    "\n",
     "print(m) # match object\n",
     "print(m.group(0), m.group(1), m.group(2)) # match groups"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**findall**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123', '456', '7890']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "tellphone = '123-456-7890'\n",
+    "pattern = r'\\d+'\n",
+    "matches=re.findall(pattern, tellphone)\n",
+    "\n",
+    "print(matches) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**finditer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches:\n",
+      "0-8: John is 25 years old.\n",
+      "10-18: Mary is 30 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "dict = \"John: 25, Mary: 30\"\n",
+    "pattern = r\"(\\w+): (\\d+)\"\n",
+    "matches = re.finditer(pattern, dict)\n",
+    "\n",
+    "print(\"Matches:\")\n",
+    "for match in matches:\n",
+    "    print(f\"{match.start()}-{match.end()}: {match.group(1)} is {match.group(2)} years old.\") # match object, start and end index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**sub**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Email me at [Eamil]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "text = \"Email me at alice@example.com\"\n",
+    "text_new=re.sub(r'\\S+@\\S+', r'[Eamil]', text) # replace from non-whitespace to non-whitespace\n",
+    "\n",
+    "print(text_new) "
    ]
   }
  ],
