Remove obsolete output and generated files, update notebook links for improved navigation and clarity

--- a/Markdown/Markdown.ipynb
+++ b/Markdown/Markdown.ipynb
@@ -89,6 +89,11 @@
     "\n",
     "[example link](https://www.example.com)\n",
     "\n",
+    "[local notebook](C:/Users/Taylor/OneDrive/Desktop/Code/Python/Notes/test.md)\n",
+    "\n",
+    "[notes in github via nbviewer](https://nbviewer.org/github/Huazhilian/Notes/blob/main/Scripts/input.py)\n",
+    "\n",
+    "[anchor within notebook](#heading)\n",
     "---"
    ]
   },
