--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "- ### Data type\n",
-    "1. Immutable: number / string / tuple\n",
+    "1. Immutable: [number](#number) / [string](#string) / [tuple](#tuple)\n",
     "\n",
-    "2. Mutable: list / dictionary / set\n",
+    "2. Mutable:  [list](#list) / [dictionary](#dictionary) / [set](#set)\n",
     "\n",
-    "3. Other: Boolen / bytes\n",
+    "3. Other: [Boolen](#Boolen) / [bytes](#bytes)\n",
     "\n",
     " ---"
    ]
