--- a/Syntax/Object_oriented.ipynb
+++ b/Syntax/Object_oriented.ipynb
@@ -6,41 +6,31 @@
    "source": [
     "- ### Class\n",
     "\n",
-    "1. (private) variable\n",
+    "1. Method type\n",
     "\n",
-    "`var=value`\n",
-    "\n",
-    "`__privatevar=privatevalue` (only callable inside class)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "2. (instance/class/static) method\n",
-    "\n",
-    "**instance:**\n",
+    "[instance:](#instance-method)\n",
     "\n",
     "`def instance_method(self, args): `\n",
     "\n",
-    "**class:**\n",
+    "[class:](#class-method-classmethod)\n",
     "\n",
     "`@classmethod`\n",
     "\n",
     "`def class_method(cls, args): `\n",
     "\n",
-    "**static:**\n",
+    "[static:](#static-method-staticmethod)\n",
     "\n",
     "`@staticmethod`\n",
     "\n",
     "`def static_method(self, args): `\n",
     "\n",
-    "**propety & setter:**\n",
+    "[propety & setter:](#propety-propety--setter-methodsetter)\n",
     "\n",
     "`@propety`\n",
     "\n",
     "`@*method*.setter`\n",
     "\n",
-    "---\n",
-    "\n",
-    "3. Exclusive method\n",
+    "[exclusive method:](#Exclusive-method)\n",
     "\n",
     "**constructor:**\n",
     "\n",
@@ -50,27 +40,43 @@
     "\n",
     "`def __del__(*self, argus*):`\n",
     "\n",
-    "...\n",
+    "---\n",
+    "\n",
+    "2. Class decorator\n",
+    "\n",
+    "[decorators for method](#decorators-for-method)\n",
+    "\n",
+    "[decorators for class](#decorators-for-class)\n",
     "\n",
     "---\n",
     "\n",
-    "4. Object\n",
-    "\n",
-    "`object=classname(*argus*)`\n",
-    "\n",
-    "---\n",
-    "\n",
-    "5. derived class & base class\n",
+    "3. Derived class & base class\n",
     "\n",
     "`class derivedclassname(modname.naseclassname):`\n",
     "\n",
     "---\n",
     "\n",
-    "6. class decorator\n",
+    "4. Attributions\n",
     "\n",
-    "**decorators for method**\n",
+    "**(private) variable**\n",
     "\n",
-    "**decorators for class**\n",
+    "`var=value`\n",
+    "\n",
+    "`__privatevar=privatevalue` (only callable inside class)\n",
+    "\n",
+    "**self-carried variable**\n",
+    "\n",
+    "instance method: self\n",
+    "\n",
+    "class method: cls\n",
+    "\n",
+    "static method: none\n",
+    "\n",
+    "propety & setter method: self\n",
+    "\n",
+    "**object**\n",
+    "\n",
+    "`object=classname(*argus*)`\n",
     "\n",
     "---"
    ]
@@ -107,76 +113,6 @@
     "object=Myclass() #object creation\n",
     "print(object.var) #accessing class variable\n",
     "print(object.method('par1','par2')) #accessing class method"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**constructor '\\_\\_init__()'**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Complex object at 0x00000216C8540050>\n",
-      "<class '__main__.Complex'>\n",
-      "1 2 2.23606797749979\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math\n",
-    "\n",
-    "class Complex: #class definition\n",
-    "    def __init__(self,real,imaginary): #constructor\n",
-    "        self.re=real\n",
-    "        self.im=imaginary\n",
-    "        self.norm=((self.re)**2+(self.im)**2)**0.5\n",
-    "z=Complex(1,2)\n",
-    "print(z) #object representation\n",
-    "print(z.__class__) #class of object\n",
-    "print(z.re,z.im,z.norm) #accessing object attributes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**destructor '\\_\\_del__()'**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object1 created.\n",
-      "Object1 destroyed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "class MyClass:\n",
-    "    def __init__(self, name):\n",
-    "        self.name = name\n",
-    "        print(f\"{self.name} created.\")\n",
-    "\n",
-    "    def __del__(self):\n",
-    "        print(f\"{self.name} destroyed.\")\n",
-    "\n",
-    "object=MyClass(\"Object1\") # object creation\n",
-    "del object # object deletion"
    ]
   },
   {
@@ -352,9 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Built-in decorators\n",
-    "\n",
-    "**class method (@classmethod)**"
+    "- ### Class method (@classmethod)"
    ]
   },
   {
@@ -382,7 +316,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**static method (@staticmethod)**"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Static method (@staticmethod)"
    ]
   },
   {
@@ -411,7 +352,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**propety (@propety) & setter (@method.setter)**"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### propety (@propety) & setter (@method.setter)"
    ]
   },
   {
@@ -446,7 +394,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**multi-decorates**"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Exclusive method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**constructor '\\_\\_init__()'**"
    ]
   },
   {
@@ -458,30 +420,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "decorator1\n",
-      "decorator2\n",
-      "Hello, world!\n"
+      "<__main__.Complex object at 0x00000216C8540050>\n",
+      "<class '__main__.Complex'>\n",
+      "1 2 2.23606797749979\n"
      ]
     }
    ],
    "source": [
-    "def decorator1(func): # first decorator function\n",
-    "    def wrapper():\n",
-    "        print(\"decorator1\")\n",
-    "        func()\n",
-    "    return wrapper\n",
-    "def decorator2(func): # second decorator function\n",
-    "    def wrapper():\n",
-    "        print(\"decorator2\")\n",
-    "        func()\n",
-    "    return wrapper\n",
+    "import math\n",
     "\n",
-    "@decorator1 # applying first decorator\n",
-    "@decorator2 # applying second decorator\n",
-    "def my_function(): \n",
-    "    print(\"Hello, world!\")\n",
+    "class Complex: #class definition\n",
+    "    def __init__(self,real,imaginary): #constructor\n",
+    "        self.re=real\n",
+    "        self.im=imaginary\n",
+    "        self.norm=((self.re)**2+(self.im)**2)**0.5\n",
+    "z=Complex(1,2)\n",
+    "print(z) #object representation\n",
+    "print(z.__class__) #class of object\n",
+    "print(z.re,z.im,z.norm) #accessing object attributes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**destructor '\\_\\_del__()'**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object1 created.\n",
+      "Object1 destroyed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        print(f\"{self.name} created.\")\n",
     "\n",
-    "my_function() # calling decorated function"
+    "    def __del__(self):\n",
+    "        print(f\"{self.name} destroyed.\")\n",
+    "\n",
+    "object=MyClass(\"Object1\") # object creation\n",
+    "del object # object deletion"
    ]
   },
   {
@@ -495,9 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Class decorators\n",
-    "\n",
-    "**decorators for method**"
+    "- ### Decorators for method"
    ]
   },
   {
@@ -535,7 +523,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**decorators for class**"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Decorators for class"
    ]
   },
   {
