--- a/Syntax/Operation.ipynb
+++ b/Syntax/Operation.ipynb
@@ -5,25 +5,25 @@
    "metadata": {},
    "source": [
     "- ### Operation type\n",
-    "1. Operator\n",
+    "1. [Operator](#operator)\n",
     "\n",
     "`*operator* a` \n",
     "\n",
     "`a *operator* b`\n",
     "\n",
-    "2. Keyword\n",
+    "2. [Keyword](#keyword)\n",
     "\n",
     "`*kw* object`\n",
     "\n",
-    "3. Function\n",
+    "3. [Function](function.ipynb)\n",
     "\n",
     "`newargs=function(*args*)`\n",
     "\n",
-    "4. Method\n",
+    "4. [Method](Object_oriented.ipynb)\n",
     "\n",
     "`object.method(*args*)`\n",
     "\n",
-    "5. Regular express\n",
+    "5. [Regular express](#regular-express)\n",
     "\n",
     "`re`\n",
     "\n",
