--- a/Syntax/error.ipynb
+++ b/Syntax/error.ipynb
@@ -6,23 +6,13 @@
    "source": [
     "- ### Error & exception\n",
     "\n",
-    "1. Error type\n",
+    "1. Error type : SyntaxError / NameError / TypeError / ValueError\n",
     "\n",
-    "**SyntaxError**\n",
-    "\n",
-    "**NameError**\n",
-    "\n",
-    "**TypeError**\n",
-    "\n",
-    "**ValueError**\n",
-    "\n",
-    "...\n",
-    "\n",
-    "2. Exception handling\n",
+    "2. [Exception handling](#exception-handling)\n",
     "\n",
     "**try...except...else...finally**\n",
     "\n",
-    "3. Raise exception\n",
+    "3. [Raise exception](#raise-exception)\n",
     "\n",
     "**raise**"
    ]
