--- a/Syntax/function.ipynb
+++ b/Syntax/function.ipynb
@@ -6,15 +6,15 @@
    "source": [
     "- ### function\n",
     "\n",
-    "1. Built-in function\n",
+    "1. [Built-in function](module.ipynb)\n",
     "\n",
-    "2. Self-defined function\n",
+    "2. [Self-defined function](#function-with-positionalkeyword-args)\n",
     "\n",
-    "3. Anonymous function\n",
+    "3. [Anonymous function](#anonymous-function)\n",
     "\n",
-    "4. Decorator\n",
+    "4. [Decorator](#Decorator)\n",
     "\n",
-    "5. Name space & scope\n",
+    "5. [Name space & scope](#name-space--scope)\n",
     "\n",
     "**name space:**\n",
     "\n",
@@ -405,9 +405,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "- ### Decorators\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Decorator\n",
     "\n",
     "**decorators without parameters**"
    ]
@@ -484,6 +489,48 @@
     "def target_function(arg1, arg2):\n",
     "    print(f\"Inside the target function with par {arg1} and {arg2}\")\n",
     "target_function('a', 'b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**multi-decorates**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decorator1\n",
+      "decorator2\n",
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def decorator1(func): # first decorator function\n",
+    "    def wrapper():\n",
+    "        print(\"decorator1\")\n",
+    "        func()\n",
+    "    return wrapper\n",
+    "def decorator2(func): # second decorator function\n",
+    "    def wrapper():\n",
+    "        print(\"decorator2\")\n",
+    "        func()\n",
+    "    return wrapper\n",
+    "\n",
+    "@decorator1 # applying first decorator\n",
+    "@decorator2 # applying second decorator\n",
+    "def my_function(): \n",
+    "    print(\"Hello, world!\")\n",
+    "\n",
+    "my_function() # calling decorated function"
    ]
   },
   {
