--- a/Syntax/numerical.ipynb
+++ b/Syntax/numerical.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "- ### numerical calculation\n",
     "\n",
-    "1. plot:\n",
+    "1. [plot:](#plot)\n",
     "\n",
     "**matplotlib**\n",
     "\n",
