--- a/Syntax/magic.ipynb
+++ b/Syntax/magic.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "- ### Jupter notebook magic commands\n",
     "\n",
-    "1. shell (terminal) commands: ! or !! (list output)\n",
+    "1. [shell (terminal) commands: ! or !! (list output)](#shell-terminal-commands-)\n",
     "\n",
     "**file & directory:**\n",
     "\n",
@@ -22,13 +22,13 @@
     "\n",
     "---\n",
     "\n",
-    "2. help: ? or *? (* for fuzzy query)\n",
+    "2. [help: ? or *? (* for fuzzy query)](#help---)\n",
     "\n",
     "`lib/module/function?`\n",
     "\n",
     "`*b/mod*/funct*?`\n",
     "\n",
-    "3. Line Magic —— one line only: %\n",
+    "3. [Line Magic —— one line only:](#line-magic-)\n",
     "\n",
     "**shell (terminal) commands: !:** \n",
     "\n",
@@ -48,7 +48,7 @@
     "\n",
     "---\n",
     "\n",
-    "4. Cell Magic —— entire cell: %%\n",
+    "4. [Cell Magic —— entire cell: %%](#cell-magic-)\n",
     "\n",
     "**time:** \n",
     "\n",
