--- a/Syntax/statement.ipynb
+++ b/Syntax/statement.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "- ### Statement\n",
-    "1. Condition: if, match\n",
+    "1. Condition: [if](#if-elif--elif-else), [match](#match-case--case)\n",
     "\n",
-    "2. Loop: while, for\n",
+    "2. Loop: [while](#while-else), [for](#for-else)\n",
     "---"
    ]
   },
@@ -45,7 +45,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ### match(-case-...-case)"
    ]
   },
@@ -77,7 +83,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ### while(-else)"
    ]
   },
@@ -128,7 +140,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- ### for(-else)"
    ]
   },
