Add new sorting algorithms, update notebooks with deep learning and math content, and configure VSCode settings

--- a/Pypi/pip.ipynb
+++ b/Pypi/pip.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "- ### installed packages and their versions\n",
     "\n",
-    "`pip freeze`\n",
+    "`pip freeze (> requirement.txt)` (export dependency)\n",
     "\n",
     "---"
    ]
