--- a/Syntax/Data_type.ipynb
+++ b/Syntax/Data_type.ipynb
@@ -498,6 +498,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**lowercase/uppercase**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world !\n",
+      "HELLO WORLD !\n",
+      "Hello World !\n",
+      "Hello world !\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt=\"hello world !\"\n",
+    "print(txt.lower())  # lower case\n",
+    "print(txt.upper())  # upper case\n",
+    "print(txt.title())  # title case\n",
+    "print(txt.capitalize())  # capitalize first letter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "- ### Tuple"
    ]
@@ -1225,6 +1256,119 @@
     "person2=dict([('name','C'),('age',23),('city','Berlin')])\n",
     "for key,value in person2.items():\n",
     "    print(key, value)  # dictionary iteration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**merge**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 1, 'y': 3, 'z': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1={'x':1,'y':2};d2={'y':3,'z':4}\n",
+    "d3={**d1,**d2};print(d3)  # dictionary merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 1, 'y': 3, 'z': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1={'x':1,'y':2};d2={'y':3,'z':4}\n",
+    "d1.update(d2);print(d1)  # dictionary update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 1, 'y': 3, 'z': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1={'x':1,'y':2};d2={'y':3,'z':4}\n",
+    "d3=d1|d2;print(d3)  # dictionary merge via '|' operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**sort by key**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 2), ('b', 1), ('c', 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={'c':3,'a':2,'b':1}\n",
+    "d_sorted_key=sorted(d.items(),key=lambda x: x[0]) # sort by key\n",
+    "print(d_sorted_key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**sort by value**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('c', 3), ('a', 2), ('b', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={'c':3,'a':2,'b':1}\n",
+    "d_sorted_value_r=sorted(d.items(),key=lambda x: x[1],reverse=True) # sort by value with reverse order\n",
+    "print(d_sorted_value_r)"
    ]
   },
   {
