--- a/Syntax/Module.ipynb
+++ b/Syntax/Module.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "[maths:](#Maths-module)\n",
     "\n",
-    "math, random, statistics\n",
+    "math, cmath, random, statistics\n",
     "\n",
     "[date & time:](#date--time-module)\n",
     "\n",
@@ -267,6 +267,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**cmath**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3+4j)\n",
+      "(2+1j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cmath\n",
+    "num=3+4j\n",
+    "print(num)  # complex number\n",
+    "print(cmath.sqrt(num))  # square root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**random**"
    ]
   },
@@ -375,17 +403,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current date and time: 2025-04-28 11:56:10.274747\n",
-      "Formatted date and time: 2025-04-28 11:56:10\n",
-      "Today's date: 2025-04-28\n",
-      "Age: 25 years and 124 days\n"
+      "Current date and time: 2025-05-05 13:03:13.242749\n",
+      "Formatted date and time: 2025-05-05 13:03:13\n",
+      "\n",
+      "Today's date: 2025-05-05\n",
+      "Age: 25 years and 131 days\n",
+      "\n",
+      "Unix time from datetime: 1746421393.242749\n",
+      "Datetime from unix time: 2025-05-05 13:03:13.242749\n",
+      "\n",
+      "Before: 2025-04-27 12:02:12.241748\n",
+      "After: 2025-05-13 14:04:14.243750\n"
      ]
     }
    ],
@@ -402,12 +437,26 @@
     "\n",
     "# Get current date\n",
     "today = datetime.date.today()\n",
-    "print(\"Today's date:\", today)\n",
+    "print(\"\\nToday's date:\", today)\n",
     "\n",
     "# age\n",
     "birth_date = datetime.date(2000, 1, 1)  # Replace with your birth date\n",
     "age = today - birth_date\n",
-    "print(\"Age:\", age.days // 365, \"years and\", age.days % 365 ,\"days\")"
+    "print(\"Age:\", age.days // 365, \"years and\", age.days % 365 ,\"days\")\n",
+    "\n",
+    "# Convert datetime to unix time\n",
+    "unix_time = now.timestamp() # seconds since epoch January 1, 1970 (UTC)\n",
+    "print(\"\\nUnix time from datetime:\", unix_time)\n",
+    "\n",
+    "# Convert unix time to datetime\n",
+    "dt = datetime.datetime.fromtimestamp(unix_time)\n",
+    "print(\"Datetime from unix time:\", dt)\n",
+    "\n",
+    "# before and after\n",
+    "before = now - datetime.timedelta(weeks=1,days=1, hours=1, minutes=1,seconds=1,microseconds=1,milliseconds=1)\n",
+    "print(\"\\nBefore:\", before)\n",
+    "after = now + datetime.timedelta(weeks=1,days=1, hours=1, minutes=1,seconds=1,microseconds=1,milliseconds=1)\n",
+    "print(\"After:\", after)"
    ]
   },
   {
@@ -690,6 +739,27 @@
     "s=b'witch which watch what why wharf';print(s);print(len(s))\n",
     "s_compressed=zlib.compress(s);print(s_compressed);print(len(s_compressed))\n",
     "s_decompressed=zlib.decompress(s_compressed);print(s_decompressed);print(len(s_decompressed))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a='wsxs'\n",
+    "a.find('s')  # find the first occurrence of 'w'"
    ]
   },
   {
