--- a/Syntax/function.ipynb
+++ b/Syntax/function.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -51,13 +51,32 @@
     }
    ],
    "source": [
-    "def function(parameter1, parameter2):\n",
-    "    if isinstance(parameter1, str) and isinstance(parameter2, str): #if both parameters are strings\n",
+    "def function(parameter1:str, parameter2:str) -> str: # function with type hints\n",
+    "    if isinstance(parameter1, str) and isinstance(parameter2, str): # if both parameters are strings\n",
     "        return parameter1 + parameter2\n",
     "    else:\n",
     "        return parameter1 * parameter2\n",
     "print(function(parameter2='x', parameter1='y'))\n",
     "print(function(2, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ab\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(a:int, b: int) -> int:\n",
+    "    return a + b\n",
+    "print(f('a', 'b'))"
    ]
   },
   {
