--- a/Syntax/statement.ipynb
+++ b/Syntax/statement.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +172,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n",
+      "Time taken to find prime numbers: 0.00025010108947753906\n"
+     ]
+    }
+   ],
+   "source": [
+    "#detect prime numbers\n",
+    "import time\n",
+    "t1=time.time()\n",
+    "\n",
+    "def is_prime(n):\n",
+    "    isprime=[1 for _ in range(n)];isprime[0]=0\n",
+    "    for i in range(1,n+1):\n",
+    "        for j in range(2,int(i**0.5)+1):\n",
+    "            if i%j==0:\n",
+    "                isprime[i-1]=0\n",
+    "                break\n",
+    "    return [i+1 for i in range(n) if isprime[i]]\n",
+    "\n",
+    "print(is_prime(100))\n",
+    "t2=time.time()\n",
+    "print(\"Time taken to find prime numbers:\",t2-t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n",
+      "Time taken to find prime numbers: 0.00018453598022460938\n"
+     ]
+    }
+   ],
+   "source": [
+    "#detect prime numbers using sieve of Eratosthenes\n",
+    "import time\n",
+    "t1=time.time()\n",
+    "\n",
+    "def eratosthenes(n):\n",
+    "    primes = [True] * (n + 1)\n",
+    "    for i in range(2, int(n**0.5) + 1):\n",
+    "        if primes[i]:\n",
+    "            for j in range(i * i, n + 1, i):\n",
+    "                primes[j] = False\n",
+    "    return [i for i in range(2, n + 1) if primes[i]]\n",
+    "\n",
+    "print(eratosthenes(100))\n",
+    "t2=time.time()\n",
+    "print(\"Time taken to find prime numbers:\",t2-t1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -180,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
