--- a/Pypi/maths.ipynb
+++ b/Pypi/maths.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Pytorch"
+    "- ### Maths calculation & plotting\n",
+    "\n",
+    "1. numpy\n",
+    "\n",
+    "2. sympy\n",
+    "\n",
+    "3. matplotlib"
    ]
   }
  ],
