Add CSV handling and Flask application setup; include examples in Jupyter notebooks

--- a/Syntax/Module.ipynb
+++ b/Syntax/Module.ipynb
@@ -702,11 +702,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv"
+    "import csv\n",
+    "\n",
+    "data1=[[1,2],[3,4],[5,6]]\n",
+    "data2=[('a','b'),('c','d'),('e','f')]\n",
+    "\n",
+    "with open(r\"test.csv\", \"w+\", newline=\"\", encoding=\"utf-8\") as file:  # open file for writing using row string, encoding utf-8\n",
+    "    writer=csv.writer(file)  # create a csv writer object\n",
+    "    \n",
+    "    writer.writerows(data1)  # write list of lists to file\n",
+    "    writer.writerows(data2)  # write list of tuples to file\n",
+    "    writer.writerow(data2)  # write list of tuples to file as a single row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['1', '2'], ['3', '4'], ['5', '6'], ['a', 'b'], ['c', 'd'], ['e', 'f'], [\"('a', 'b')\", \"('c', 'd')\", \"('e', 'f')\"]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open(r\"test.csv\", \"r+\", newline=\"\", encoding=\"utf-8\") as file:  # open file for reading using row string, encoding utf-8\n",
+    "    reader=csv.reader(file)  # create a csv reader object\n",
+    "    data=list(reader)  # read all lines from file\n",
+    "    print(data)  # print all lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "data = [\n",
+    "    {'name': 'Alice', 'age': 30, 'city': 'New York'},\n",
+    "    {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}\n",
+    "]\n",
+    "\n",
+    "with open('test_dict.csv', 'w', newline='') as csvfile:\n",
+    "    fieldnames = data[0].keys()  # or set a fixed list: ['name', 'age', 'city']\n",
+    "    writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+    "    \n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Alice', 'age': '30', 'city': 'New York'}, {'name': 'Bob', 'age': '25', 'city': 'Los Angeles'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open(r\"test_dict.csv\", \"r+\", newline=\"\", encoding=\"utf-8\") as file:  # open file for reading using row string, encoding utf-8\n",
+    "    reader=csv.DictReader(file)  # create a csv reader object\n",
+    "    data = list(reader)  # read all rows into a list\n",
+    "    print(data)"
    ]
   },
   {
@@ -742,24 +817,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**sqlite3**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Alice', 'age': '30', 'city': 'New York'}, {'name': 'Bob', 'age': '25', 'city': 'Los Angeles'}]\n",
+      "[('Alice', '30', 'New York'), ('Bob', '25', 'Los Angeles')]\n"
+     ]
     }
    ],
    "source": [
-    "a='wsxs'\n",
-    "a.find('s')  # find the first occurrence of 'w'"
+    "import sqlite3\n",
+    "import csv\n",
+    "\n",
+    "with open(r\"test_dict.csv\", \"r+\", newline=\"\", encoding=\"utf-8\") as file:  # open file for reading using row string, encoding utf-8\n",
+    "    reader=csv.DictReader(file)  # create a csv reader object\n",
+    "    data = [row for row in reader]  # read all rows into a list\n",
+    "    key_order = data[0].keys()  # get the keys from the first dictionary\n",
+    "    tu=[tuple(d[key] for key in key_order) for d in data]  # convert list of dictionaries to tuple of tuples\n",
+    "    print(data)\n",
+    "    print(tu)\n",
+    "\n",
+    "# Connect to DB\n",
+    "conn = sqlite3.connect('test_database.db')\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Create table if needed\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS users (\n",
+    "    id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "    name TEXT NOT NULL,\n",
+    "    age INTEGER,\n",
+    "    city TEXT\n",
+    ")\n",
+    "''')\n",
+    "\n",
+    "# Batch insert\n",
+    "cursor.executemany('INSERT INTO users (name, age, city) VALUES (?, ?, ?)', tu)\n",
+    "\n",
+    "# Commit and close\n",
+    "conn.commit()\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Alice', 30, 'New York')\n",
+      "(2, 'Bob', 25, 'Los Angeles')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect('test_database.db') # Connect to DB\n",
+    "cursor = conn.cursor() # Create cursor\n",
+    "\n",
+    "cursor.execute('SELECT * FROM users') \n",
+    "for row in cursor.fetchall():\n",
+    "    print(row)\n",
+    "\n",
+    "conn.close()\n"
    ]
   },
   {
