--- a/Syntax/function.ipynb
+++ b/Syntax/function.ipynb
@@ -394,6 +394,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Cartesian product**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 6\n",
+      "1 4 3\n",
+      "1 5 6\n",
+      "1 5 3\n",
+      "2 4 6\n",
+      "2 4 3\n",
+      "2 5 6\n",
+      "2 5 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "for x,y,z in product([1, 2], [4, 5], [6, 3]):\n",
+    "    print(x,y,z) # Cartesian product of the lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**encapsulation**"
    ]
   },
