--- a/Syntax/Object_oriented.ipynb
+++ b/Syntax/Object_oriented.ipynb
@@ -158,6 +158,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 10 10\n",
+      "10 10 10\n",
+      "10 10 10 \n",
+      "\n",
+      "-8 -6 -4\n",
+      "-2 0 2\n",
+      "4 6 8 \n",
+      "\n",
+      "30 24 18\n",
+      "84 69 54\n",
+      "138 114 90\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Matrix:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.rows = len(data)\n",
+    "        self.cols = len(data[0])\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        if self.rows != other.rows or self.cols != other.cols:\n",
+    "            raise ValueError(\"Matrices must have the same dimensions for addition.\")\n",
+    "\n",
+    "        result = [\n",
+    "            [self.data[i][j] + other.data[i][j] for j in range(self.cols)]\n",
+    "            for i in range(self.rows)\n",
+    "        ]\n",
+    "        return Matrix(result)\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        if self.rows != other.rows or self.cols != other.cols:\n",
+    "            raise ValueError(\"Matrices must have the same dimensions for subtraction.\")\n",
+    "\n",
+    "        result = [\n",
+    "            [self.data[i][j] - other.data[i][j] for j in range(self.cols)]\n",
+    "            for i in range(self.rows)\n",
+    "        ]\n",
+    "        return Matrix(result)\n",
+    "    \n",
+    "    def __mul__(self, other):\n",
+    "        if self.cols != other.rows:\n",
+    "            raise ValueError(\"Number of columns in the first matrix must be equal to the number of rows in the second matrix.\")\n",
+    "        result = [\n",
+    "            [sum(self.data[i][k] * other.data[k][j] for k in range(self.cols)) for j in range(other.cols)]\n",
+    "            for i in range(self.rows)\n",
+    "        ]\n",
+    "        return Matrix(result)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return \"\\n\".join(\" \".join(map(str, row)) for row in self.data) # using '\\n' to join rows and ' ' to join columns\n",
+    "\n",
+    "matrix1 = Matrix([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "matrix2 = Matrix([[9, 8, 7], [6, 5, 4], [3, 2, 1]])\n",
+    "\n",
+    "matrix3 = matrix1 + matrix2\n",
+    "matrix4 = matrix1 - matrix2\n",
+    "matrix5 = matrix1 * matrix2\n",
+    "print(matrix3,'\\n')\n",
+    "print(matrix4,'\\n')\n",
+    "print(matrix5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -413,16 +486,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Complex object at 0x00000216C8540050>\n",
-      "<class '__main__.Complex'>\n",
-      "1 2 2.23606797749979\n"
+      "1+2i 3+4i\n",
+      "4+6i\n",
+      "-2+-2i\n",
+      "1 2\n",
+      "2.23606797749979\n",
+      "2.23606797749979\n"
      ]
     }
    ],
@@ -434,10 +510,26 @@
     "        self.re=real\n",
     "        self.im=imaginary\n",
     "        self.norm=((self.re)**2+(self.im)**2)**0.5\n",
-    "z=Complex(1,2)\n",
-    "print(z) #object representation\n",
-    "print(z.__class__) #class of object\n",
-    "print(z.re,z.im,z.norm) #accessing object attributes"
+    "    \n",
+    "    def __add__(self,other):\n",
+    "        return Complex(self.re+other.re,self.im+other.im)\n",
+    "    \n",
+    "    def __sub__(self,other):\n",
+    "        return Complex(self.re-other.re,self.im-other.im)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"{self.re}+{self.im}i\"\n",
+    "    \n",
+    "    def norm_(self):\n",
+    "        return math.sqrt(self.re**2+self.im**2)\n",
+    "    \n",
+    "z1=Complex(1,2);z2=Complex(3,4) #object creation\n",
+    "print(z1, z2) # object representation\n",
+    "print(z1+z2) # using __add__ method\n",
+    "print(z1-z2) # using __sub__ method\n",
+    "print(z1.re,z1.im)\n",
+    "print(z1.norm) # accessing object attributes\n",
+    "print(z1.norm_()) # using method"
    ]
   },
   {
