Add deep learning frameworks to notebook and create new HTML charts for data visualization

--- a/Pypi/deep_learning.ipynb
+++ b/Pypi/deep_learning.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "- ### Deep learning\n",
     "\n",
-    "1. Pytorch"
+    "1. Pytorch\n",
+    "\n",
+    "2. TensorFlow"
    ]
   }
  ],
