Add new Jupyter notebooks for data handling and deep learning frameworks

--- a/Pypi/Deep learning/Pytorch.ipynb
+++ b/Pypi/Deep learning/Pytorch.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Deep learning\n",
-    "\n",
-    "1. Pytorch\n",
-    "\n",
-    "2. TensorFlow"
+    "- ### Pytorch"
    ]
   }
  ],
