--- a/Pypi/data handling/Pyecharts.ipynb
+++ b/Pypi/data handling/Pyecharts.ipynb
@@ -4,9 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Data visulization\n",
+    "- ### Pyecharts -- data visulization\n",
     "\n",
-    "1. Pyecharts\n",
+    "1. Bar chart\n",
+    "\n",
+    "2. Line chart\n",
+    "\n",
+    "3. Pie chart\n",
+    "\n",
+    "4. K-line chart\n",
+    "\n",
+    "5. Map\n",
     "\n",
     "---"
    ]
@@ -15,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Pyecharts"
+    "- ### Bar chart"
    ]
   },
   {
@@ -26,13 +34,6 @@
    "source": [
     "%%capture\n",
     "%pip install pyecharts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**bar chart**"
    ]
   },
   {
@@ -290,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**line chart**"
+    "- ### Line chart"
    ]
   },
   {
@@ -592,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**pie chart**"
+    "- ### Pie chart"
    ]
   },
   {
@@ -770,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**k-line chart**"
+    "- ### K-line chart"
    ]
   },
   {
@@ -54773,7 +54774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**map**"
+    "- ### Map"
    ]
   },
   {
