--- a/Pypi/maths/numpy.ipynb
+++ b/Pypi/maths/numpy.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "- ### Numpy\n",
     "\n",
-    "1. [Array creating](#array-creating)\n",
+    "1. [Array creation](#array-creation)\n",
     "\n",
     "2. [Array attributes](#array-attributes)\n",
     "\n",
@@ -14,7 +14,9 @@
     "\n",
     "4. [Array broadcasting](#array-broadcasting)\n",
     "\n",
-    "5. [Array opreator]"
+    "5. [Array reshaping](#array-reshaping)\n",
+    "\n",
+    "6. [Array manipulation](#Array-manipulation)"
    ]
   },
   {
@@ -28,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Array creating"
+    "- ### Array creation"
    ]
   },
   {
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,6 +107,8 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "series=np.arange(1, 10, 2) # array with step\n",
     "print(series,'\\n')\n",
     "\n",
@@ -124,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4607182418800017408 4611686018427387904 4613937818241073152]\n",
-      " [4616189618054758400 4617315517961601024 4618441417868443648]\n",
-      " [4619567317775286272 4620693217682128896 4621256167635550208]] \n",
+      "[[0 0 0]\n",
+      " [0 0 0]\n",
+      " [0 0 0]] \n",
       "\n",
       "[[0. 0.]\n",
       " [0. 0.]] \n",
@@ -143,11 +147,16 @@
       "[0. 0.] \n",
       "\n",
       "[1. 1.] \n",
+      "\n",
+      "[[7 7]\n",
+      " [7 7]] \n",
       "\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "a=np.empty((3, 3),dtype=int) # empty array\n",
     "print(a,'\\n')\n",
     "\n",
@@ -161,7 +170,10 @@
     "print(d,'\\n')\n",
     "\n",
     "e=np.ones_like(d) # ones like shape of d\n",
-    "print(e,'\\n')"
+    "print(e,'\\n')\n",
+    "\n",
+    "f=np.full((2, 2), 7) # full array with constant value\n",
+    "print(f,'\\n')"
    ]
   },
   {
@@ -661,7 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Array opreator"
+    "- ### Array reshaping"
    ]
   },
   {
@@ -796,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -828,6 +840,20 @@
     "\n",
     "np.transpose(m) # another way to transpose\n",
     "print(np.transpose(m))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Array manipulation"
    ]
   },
   {
@@ -991,6 +1017,113 @@
     "print(y.shape) # shape of y\n",
     "print(z.shape) # shape of z\n",
     "print(w.shape) # shape of w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**stack**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "(2, 3)\n",
+      "(2, 2, 3)\n",
+      "(2, 2, 3)\n",
+      "(2, 6)\n",
+      "(4, 3)\n",
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[ 7  8  9]\n",
+      "  [10 11 12]]] \n",
+      "\n",
+      "[[[ 1  2  3]\n",
+      "  [ 7  8  9]]\n",
+      "\n",
+      " [[ 4  5  6]\n",
+      "  [10 11 12]]] \n",
+      "\n",
+      "[[ 1  2  3  7  8  9]\n",
+      " [ 4  5  6 10 11 12]] \n",
+      "\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "y = np.array([[7, 8, 9], [10, 11, 12]])\n",
+    "z =np.stack((x, y), axis=0) # stack along axis 0\n",
+    "w = np.stack((x, y), axis=1) # stack along axis 1\n",
+    "u = np.hstack((x, y)) # horizontal stack\n",
+    "v = np.vstack((x, y)) # vertical stack\n",
+    "\n",
+    "print(x.shape) # shape of x\n",
+    "print(y.shape) # shape of y\n",
+    "print(z.shape) # shape of z\n",
+    "print(w.shape) # shape of w\n",
+    "print(u.shape) # shape of z\n",
+    "print(v.shape) # shape of w\n",
+    "\n",
+    "print(z,'\\n') # stacked array\n",
+    "print(w,'\\n') # stacked array\n",
+    "print(u,'\\n') # stacked array\n",
+    "print(v,'\\n') # stacked array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**split**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 2)\n",
+      "(1, 2)\n",
+      "(2, 1) \n",
+      "\n",
+      "[[1 2]] \n",
+      "\n",
+      "[[1]\n",
+      " [4]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([[1, 2], [4, 5]])\n",
+    "y = np.split(x, 2, axis=0) # split along axis 0\n",
+    "z = np.hsplit(x, 2) # split along axis 1\n",
+    "print(x.shape) # shape of x\n",
+    "print(y[0].shape) # shape of y\n",
+    "print(z[0].shape,'\\n') # shape of z\n",
+    "print(y[0],'\\n') # split array along axis 0\n",
+    "print(z[0],'\\n') # split array along axis 1"
    ]
   }
  ],
